--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 align="center">Matemáticas</h1>
     <h2>Hola...</h2>
     <p style="text-align:justify">
-      ¡Bienvenidos al portal de matemáticas del CBC! Aquí encontrarás una invaluable fuente de recursos diseñada para ayudarte a navegar por el desafiante mundo de las matemáticas universitarias. Desde conceptos fundamentales hasta problemas resueltos y consejos de estudio, nuestro objetivo es convertir el aprendizaje de las matemáticas en una experiencia emocionante y accesible para todos los estudiantes del Ciclo Básico Común. Sumérgete en un viaje educativo que te preparará para el éxito en tus cursos y más allá. ¡Comencemos a explorar el fascinante universo de las matemáticas juntos!
+      ¡Bienvenidos al portal de matemáticas del CBC! Aquí encontrarás una invaluable fuente de recursos diseñada para ayudarte a navegar por el desafiante mundo de las matemáticas universitarias. Desde conceptos fundamentales hasta problemas resueltos y consejos de estudio, nuestro objetivo es convertir el aprendizaje de las matemáticas en una experiencia emocionante y accesible para todos los estudiantes del Ciclo Básico Común. Sumérgete en un viaje educativo que te preparará para el éxito en tus cursos y más allá. ¡Comencemos a explorar el fascinante universo de las matemáticas juntos!!
       </p>
       
         
