--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto</title>
+    <link rel="stylesheet" href="estilos.css">
+    <link rel="icon" href="imagenes/gorro-de-cocinero.png">
 </head>
 <body>
-  <h1>Delicias Culinarias: Sabores que Encantan y Recetas que Despiertan Pasiones</h1>
-  <p>¡Bienvenidos a nuestro rincón culinario en línea! En este espacio, te invitamos a explorar un mundo de sabores y aromas donde la creatividad en la cocina no tiene límites. Nuestra página web de recetas de cocina es tu guía confiable para descubrir deliciosas recetas, consejos prácticos y técnicas culinarias que te ayudarán a convertirte en un maestro de la cocina en la comodidad de tu hogar. Ya seas un chef experimentado o un principiante en busca de inspiración, estamos aquí para inspirarte en cada paso del camino. ¡Prepárate para desatar tu pasión por la cocina y embarcarte en un emocionante viaje gastronómico con nosotros!</p>
+  <h1>Delicias Culinarias: Sabores que Encantan y Recetas que Despiertan Pasiones
+  </h1>
+  <p>¡Bienvenidos a nuestro rincón culinario en línea! En este espacio, te invitamos a explorar un mundo de sabores y aromas donde la creatividad en la cocina no tiene límites. Nuestra página web de recetas de cocina es tu guía confiable para descubrir deliciosas recetas, consejos prácticos y técnicas culinarias que te ayudarán a convertirte en un maestro de la cocina en la comodidad de tu hogar. Ya seas un chef experimentado o un principiante en busca de inspiración, estamos aquí para inspirarte en cada paso del camino. ¡Prepárate para desatar tu pasión por la cocina y embarcarte en un emocionante viaje gastronómico con nosotros!
+  </p>
     
 </body>
 </html>
