--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <h1>Delicias Culinarias: Sabores que Encantan y Recetas que Despiertan Pasiones
   </h1>
-  <p id="Bienveni">¡Bienvenidos a nuestro rincón culinario en línea! En este espacio, te invitamos a explorar un mundo de sabores y aromas donde la creatividad en la cocina no tiene límites. Nuestra página web de recetas de cocina es tu guía confiable para descubrir deliciosas recetas, consejos prácticos y técnicas culinarias que te ayudarán a convertirte en un maestro de la cocina en la comodidad de tu hogar. Ya seas un chef experimentado o un principiante en busca de inspiración, estamos aquí para inspirarte en cada paso del camino. ¡Prepárate para desatar tu pasión por la cocina y embarcarte en un emocionante viaje gastronómico con nosotros!
+  <p id="bienvenida">¡Bienvenidos a nuestro rincón culinario en línea! En este espacio, te invitamos a explorar un mundo de sabores y aromas donde la creatividad en la cocina no tiene límites. Nuestra página web de recetas de cocina es tu guía confiable para descubrir deliciosas recetas, consejos prácticos y técnicas culinarias que te ayudarán a convertirte en un maestro de la cocina en la comodidad de tu hogar. Ya seas un chef experimentado o un principiante en busca de inspiración, estamos aquí para inspirarte en cada paso del camino. ¡Prepárate para desatar tu pasión por la cocina y embarcarte en un emocionante viaje gastronómico con nosotros!
   </p>
     
 </body>
