--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     Delicias Culinarias: Sabores que Encantan y Recetas que Despiertan Pasiones
   </h1>
   <h2>Secciones</h2>
-  <nav> Prueba
+  <nav> 
+  <a href="recetas_arg.html">Recetas Argentinas</a>
+  <a href="recetas_veget.html">Recetas Vegetarianas</a>
   </nav>
   <p id="bienvenida">¡Bienvenidos a nuestro rincón culinario en línea! En este espacio, te invitamos a explorar un mundo de sabores y aromas donde la creatividad en la cocina no tiene límites. Nuestra página web de recetas de cocina es tu guía confiable para descubrir deliciosas recetas, consejos prácticos y técnicas culinarias que te ayudarán a convertirte en un maestro de la cocina en la comodidad de tu hogar. Ya seas un chef experimentado o un principiante en busca de inspiración, estamos aquí para inspirarte en cada paso del camino. ¡Prepárate para desatar tu pasión por la cocina y embarcarte en un emocionante viaje gastronómico con nosotros!
   </p>
