--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     Delicias Culinarias: Sabores que Encantan y Recetas que Despiertan Pasiones
   </h1>
   <h2>Secciones</h2>
-  <nav> 
+  <nav id="navegacion"> 
   <a href="recetas_arg.html">Recetas Argentinas</a>
   <a href="recetas_veget.html">Recetas Vegetarianas</a>
   <a href="recetas_veg">Recetas Veganas</a>
