--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
   </h1>
   <h2>Secciones</h2>
   <nav id="navegacion"> 
-  <a href="recetas_arg.html">Recetas Argentinas</a>
+  <ul id="barra_nav">
+  <li>><a href="recetas_arg.html">Recetas Argentinas</a>
   <a href="recetas_veget.html">Recetas Vegetarianas</a>
   <a href="recetas_veg.html">Recetas Veganas</a>
   <a href="entradas.html">Entradas</a>
   <a href="postres.html">Postres</a>
+  </ul>
   </nav>
   <p id="bienvenida">¡Bienvenidos a nuestro rincón culinario en línea! En este espacio, te invitamos a explorar un mundo de sabores y aromas donde la creatividad en la cocina no tiene límites. Nuestra página web de recetas de cocina es tu guía confiable para descubrir deliciosas recetas, consejos prácticos y técnicas culinarias que te ayudarán a convertirte en un maestro de la cocina en la comodidad de tu hogar. Ya seas un chef experimentado o un principiante en busca de inspiración, estamos aquí para inspirarte en cada paso del camino. ¡Prepárate para desatar tu pasión por la cocina y embarcarte en un emocionante viaje gastronómico con nosotros!
   </p>
