--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <h2>Secciones</h2>
   <nav id="navegacion"> 
   <ul id="barra_nav">
-  <li>> <a href="recetas_arg.html">Recetas Argentinas</a></li>
-  <a href="recetas_veget.html">Recetas Vegetarianas</a>
-  <a href="recetas_veg.html">Recetas Veganas</a>
+  <li> <a href="recetas_arg.html">Recetas Argentinas</a> </li>
+ <li> <a href="recetas_veget.html">Recetas Vegetarianas</a> </li>
+ <li> <a href="recetas_veg.html">Recetas Veganas</a>
   <a href="entradas.html">Entradas</a>
   <a href="postres.html">Postres</a>
   </ul>
