--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <title>Proyecto</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="imagenes/gorro-de-cocinero.png">
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    
 </head>
 <body>
-  <h1>
+  <h1 class="animate__animated animate__slideInLeft">
     Delicias Culinarias: Sabores que Encantan y Recetas que Despiertan Pasiones
   </h1>
   <h2>Secciones</h2>
