--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     
 </head>
 <body>
+  <header>
   <h1 class="animate__animated animate__slideInLeft">
     Delicias Culinarias: Sabores que Encantan y Recetas que Despiertan Pasiones
   </h1>
+</header>
   <h2>Secciones</h2>
   <nav id="navegacion"> 
   <ul id="barra_nav">
