--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     
 </head>
 <body>
-  <h1 class="animate__animated animate__slideInLeft">
+  <header class="animate__animated animate__slideInLeft">
+  <h1>
     Delicias Culinarias: Sabores que Encantan y Recetas que Despiertan Pasiones
   </h1>
+  </header>
   <h2>Secciones</h2>
   <nav id="navegacion"> 
   <ul id="barra_nav">
