--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     
 </head>
 <body>
-  <header class="animate__animated animate__slideInLeft">
-  <h1>
+  <header>
+  <h1 class="animate__animated animate__slideInLeft">
     Delicias Culinarias: Sabores que Encantan y Recetas que Despiertan Pasiones
   </h1>
   </header>
