--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
   </p>
   
 <div class="grid-container">
-    <div class="caja">Caja 1</div>
-    <div class="caja">Caja 2</div>
-    <div class="caja">Caja 3</div>
-    <div class="caja">Caja4</div>
+    <div class="caja caja1">Caja 1</div>
+    <div class="caja caja2">Caja 2</div>
+    <div class="caja caja3">Caja 3</div>
+    <div class="caja caja4">Caja4</div>
   </div>  
 
 </body>
