--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="icon" href="imagenes/gorro-de-cocinero.png">
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+   
     
+    <script src="js/script.js"></script>
+
+
 </head>
 <body>
   <header>
@@ -17,25 +21,24 @@
   </h1>
 </header>
   
-  <nav id="navegacion"> 
+<nav id="navegacion"> 
   <ul id="barra_nav">
-  <li> <a href="recetas_arg.html">Recetas Argentinas</a> </li>
-  <li> <a href="recetas_veget.html">Recetas Vegetarianas</a> </li>
-  <li> <a href="recetas_veg.html">Recetas Veganas</a> </li>
-  <li> <a href="entradas.html">Entradas</a> </li>
-  <li> <a href="postres.html">Postres</a> </li>
-  <li> <a href="Detox.html"> Bebidas DeTox</a></li>
-  </ul>
-  </nav>
+     <li> <a href="recetas.html">Recetas</a> </li>
+     <li> <a href="libros.html">Libros</a> </li>
+     <li> <a href="cursos.html">Cursos</a> </li>
+     <li> <a href="contacto.html">Contacto</a> </li>
+   </ul>
+</nav>
   <p id="bienvenida">¡Bienvenidos a nuestro rincón culinario en línea! En este espacio, te invitamos a explorar un mundo de sabores y aromas donde la creatividad en la cocina no tiene límites. Nuestra página web de recetas de cocina es tu guía confiable para descubrir deliciosas recetas, consejos prácticos y técnicas culinarias que te ayudarán a convertirte en un maestro de la cocina en la comodidad de tu hogar. Ya seas un chef experimentado o un principiante en busca de inspiración, estamos aquí para inspirarte en cada paso del camino. ¡Prepárate para desatar tu pasión por la cocina y embarcarte en un emocionante viaje gastronómico con nosotros!
-  </p>
+   </p>
   
 <div class="grid-container">
     <div class="caja caja1">Caja 1</div>
     <div class="caja caja2">Caja 2</div>
     <div class="caja caja3">Caja 3</div>
-    <div class="caja caja4">Caja4</div>
+    <div class="caja caja4">Caja 4</div>
   </div>  
 
 </body>
+
 </html>
