--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
    </p>
   
 <div class="grid-container">
-    <div class="caja caja1">Caja 1</div>
-    <div class="caja caja2">Caja 2</div>
+    <div class="caja caja1">Plato del día</div>
+    <div class="caja caja2">Receta sugerido por usuarios/as</div>
     <div class="caja caja3">Caja 3</div>
     <div class="caja caja4">Caja 4</div>
   </div>  
