modificado:     index.html 	modificado:     style.css

--- a/index.html
+++ b/index.html
@@ -33,12 +33,19 @@
    </p>
   
 <div class="grid-container">
-    <div class="caja caja1">Plato del día</div>
-    <div class="caja caja2">Receta sugerido por usuarios/as</div>
-    <div class="caja caja3">Caja 3</div>
-    <div class="caja caja4">Caja 4</div>
-  </div>  
+    <div class="caja caja1 animate__animated animate__pulse">Plato del día</div>
+    <div class="caja caja2 animate__animated animate__pulse">Receta sugerido por usuarios/as</div>
+    <div class="caja caja3 animate__animated animate__pulse">De los mas chiquitos</div>
+    <div class="caja caja4 animate__animated animate__pulse">Caja 4</div>
+  </div> 
+  
 
-</body>
+  
+<div>
 
+ <footer>
+  footer
+  </footer>
+
+</div>
 </html>
