--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
    
-    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+
     <script src="js/script.js"></script>
 
 
@@ -23,10 +24,10 @@
   
 <nav id="navegacion"> 
   <ul id="barra_nav">
-     <li> <a href="recetas.html">Recetas</a> </li>
-     <li> <a href="libros.html">Libros</a> </li>
-     <li> <a href="cursos.html">Cursos</a> </li>
-     <li> <a href="contacto.html">Contacto</a> </li>
+     <li> <span class="material-symbols-outlined">skillet_cooktop</span> <a href="recetas.html">Recetas</a> </li>
+     <li> <span class="material-symbols-outlined">book_3</span> <a href="libros.html">Libros</a> </li>
+     <li> <span class="material-symbols-outlined">school</span> <a href="cursos.html">Cursos</a> </li>
+     <li> <span class="material-symbols-outlined"> alternate_email </span><a href="contacto.html">Contacto</a> </li>
    </ul>
 </nav>
   <p id="bienvenida">¡Bienvenidos a nuestro rincón culinario en línea! En este espacio, te invitamos a explorar un mundo de sabores y aromas donde la creatividad en la cocina no tiene límites. Nuestra página web de recetas de cocina es tu guía confiable para descubrir deliciosas recetas, consejos prácticos y técnicas culinarias que te ayudarán a convertirte en un maestro de la cocina en la comodidad de tu hogar. Ya seas un chef experimentado o un principiante en busca de inspiración, estamos aquí para inspirarte en cada paso del camino. ¡Prepárate para desatar tu pasión por la cocina y embarcarte en un emocionante viaje gastronómico con nosotros!
