modificado:     index.html 	modificado:     style.css

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
    </p>
   
 <div class="grid-container">
-    <div class="caja caja1 animate__animated animate__pulse">Plato del día</div>
-    <div class="caja caja2 animate__animated animate__pulse">Receta sugerido por usuarios/as</div>
-    <div class="caja caja3 animate__animated animate__pulse">De los mas chiquitos</div>
+    <div class="caja caja1 animate__animated animate__pulse"><a href="plato_del_dia.html" class="no_subrayar">Plato del día</a></div>
+    <div class="caja caja2 animate__animated animate__pulse"><a href="Recenta_usuarios.html" class="no_subrayar">Receta sugerido por usuarios/as</a></div>
+    <div class="caja caja3 animate__animated animate__pulse"><a href="Receta_chiquitos.html" class="no_subrayar">De los mas chiquitos</a></div>
     <div class="caja caja4 animate__animated animate__pulse">Caja 4</div>
   </div> 
   
