--- a/index.html
+++ b/index.html
@@ -42,11 +42,14 @@
   
 
   
-<div>
+ <div id="fondo">
+   
+  </div>
 
- <footer class="ft">
+
+ <footer>
    footer
   </footer>
 
-</div>
+
 </html>
