modificado:     Receta_chiquitos.html

--- a/Receta_chiquitos.html
+++ b/Receta_chiquitos.html
@@ -13,10 +13,10 @@
         <div class="texto">Aquí va tu texto.</div>
         <div class="fotos">
           <div class="foto">
-            <img src="imagen1.jpg" alt="Imagen 1">
+            <img src="imagenes/Fio1.jpeg" alt="Imagen 1">
           </div>
           <div class="foto">
-            <img src="imagen2.jpg" alt="Imagen 2">
+            <img src="imagenes/Fio2.jpeg" alt="Imagen 2">
           </div>
         </div>
       </div>
