--- a/Receta_chiquitos.html
+++ b/Receta_chiquitos.html
@@ -8,9 +8,42 @@
 
 </head>
 <body>
+    <div id="present_chiquitos">
+        ¡Hola Fiorella y Bianca! Queremos darles las gracias por la receta de las galletitas con formas que cocinaron junto a su mamá. Estamos muy contentos de haber probado esas galletitas tan deliciosas que hicieron. Nos alegra mucho que hayan compartido esta receta especial con nosotros. Seguro que se divirtieron mucho cocinando juntas. ¡Gracias por hacer que nuestras meriendas sean más sabrosas y especiales! Esperamos con ansias probar más de sus creaciones en el futuro. ¡Son unas pequeñas chefs geniales!
+    </div>
 
     <div class="grid-container">
-        <div class="texto">Aquí va tu texto.</div>
+        <div class="texto">
+            <h1>Receta de Galletitas con Formas</h1>
+            <h2>Ingredientes:</h2>
+            <ul>
+                <li>2 1/2 tazas de harina de trigo</li>
+                <li>1/2 cucharadita de sal</li>
+                <li>1 taza de mantequilla sin sal (a temperatura ambiente)</li>
+                <li>3/4 taza de azúcar</li>
+                <li>1 huevo</li>
+                <li>1 cucharadita de extracto de vainilla</li>
+                <li>Opcional: colorantes alimentarios</li>
+                <li>Opcional: azúcar glass y glaseado para decorar</li>
+            </ul>
+        
+            <h2>Instrucciones:</h2>
+            <ol>
+                <li>En un tazón grande, mezcla la harina y la sal. Puedes tamizar la harina para asegurarte de que no haya grumos.</li>
+                <li>En otro tazón grande, bate la mantequilla y el azúcar hasta que la mezcla esté suave y cremosa.</li>
+                <li>Agrega el huevo y la vainilla a la mezcla de mantequilla y azúcar, y continúa batiendo hasta que estén bien combinados.</li>
+                <li>Poco a poco, agrega la mezcla de harina y sal a la mezcla de mantequilla, revolviendo continuamente hasta que la masa se forme. Si deseas, puedes agregar colorantes alimentarios en este punto para dar color a la masa. Divide la masa en porciones y tiñe cada porción con los colores deseados.</li>
+                <li>Envuelve la masa en papel film y refrigérala durante al menos 30 minutos. Esto facilitará la manipulación de la masa y ayudará a que las galletitas mantengan su forma.</li>
+                <li>Precalienta el horno a 180°C (350°F).</li>
+                <li>Saca la masa del refrigerador y extiéndela sobre una superficie enharinada hasta que tenga aproximadamente 1/4 de pulgada (0.6 cm) de grosor.</li>
+                <li>Utiliza cortadores de galletas para hacer formas en la masa. Coloca las galletitas en una bandeja para hornear forrada con papel pergamino.</li>
+                <li>Hornea las galletitas en el horno precalentado durante 10-12 minutos, o hasta que los bordes estén ligeramente dorados.</li>
+                <li>Deja enfriar las galletitas en la bandeja durante unos minutos antes de transferirlas a una rejilla para que se enfríen por completo.</li>
+                <li>Una vez que las galletitas estén completamente frías, puedes decorarlas con azúcar glass y glaseado, si lo deseas.</li>
+            </ol>
+
+
+        </div>
         <div class="fotos">
           <div class="foto">
             <img src="imagenes/Fio1.jpeg" alt="Imagen 1">
