modificado:     Receta_chiquitos.css 	modificado:     Receta_chiquitos.html

--- a/Receta_chiquitos.html
+++ b/Receta_chiquitos.html
@@ -57,4 +57,7 @@
       
     
 </body>
+
+<br> <!-- Agrega un salto de línea para separar el texto del enlace -->
+    <a href="index.html">Volver a Inicio</a>
 </html>
