modificado:     Receta_chiquitos.css 	modificado:     Receta_chiquitos.html 	modificado:     style.css

--- a/Receta_chiquitos.html
+++ b/Receta_chiquitos.html
@@ -46,7 +46,7 @@
         </div>
         <div class="fotos">
           <div class="foto">
-            <img src="imagenes/Fio1.jpeg" alt="Imagen 1">
+            <img src="imagenes/Fio1.jpeg" alt="Imagen 1"> <!--Le agregamos texto alternativo-->
           </div>
           <div class="foto">
             <img src="imagenes/Fio2.jpeg" alt="Imagen 2">
