modificado:     Receta_chiquitos.css 	modificado:     Receta_chiquitos.html 	modificado:     recetas.html

--- a/Receta_chiquitos.html
+++ b/Receta_chiquitos.html
@@ -59,5 +59,10 @@
 </body>
 
 <br> <!-- Agrega un salto de línea para separar el texto del enlace -->
-    <a href="index.html">Volver a Inicio</a>
+    
+
+<div class="volver">
+      <a href="index.html">Volver a la Página de inicio</a>
+  </div>
+
 </html>
