--- a/recetas.html
+++ b/recetas.html
@@ -55,12 +55,31 @@
     </div>
 
     <div class="receta">
-        <h2>Receta 3: Empanadas de Carne</h2>
-        <!-- Contenido de la receta 3 -->
+        <h2>Empanadas de Carne</h2>
+        <h3>Ingredientes:</h3>
+        <ul>
+            <li>500 gramos de carne picada (puede ser carne de res o carne de cerdo)</li>
+            <li>1 cebolla picada en trozos chicos</li>
+            <li>2 huevos duros picados</li>
+            <li>3 cucharadas de aceitunas verdes picadas</li>
+            <li>Comino, pimentón, y ají molido al gusto</li>
+            <li>Masa para empanadas (puede ser casera o comprada)</li>
+            <li>Aceite para freír</li>
+        </ul>
+        <h3>Procedimiento:</h3>
+        <ol>
+            <li>En una sartén grande, calentá aceite y dorá la cebolla.</li>
+            <li>Agregá la carne picada y cociná hasta que esté bien dorada.</li>
+            <li>Añadí las especias (comino, pimentón, ají molido), las aceitunas picadas y los huevos duros. Mezclá todo bien y cociná unos minutos más.</li>
+            <li>Extendé la masa para empanadas sobre una superficie plana y rellenala con la preparación de carne.</li>
+            <li>Doblá la masa por la mitad para cubrir el relleno y sellá los bordes con un tenedor.</li>
+            <li>Calentá aceite en una sartén y freí las empanadas hasta que estén doradas y crujientes.</li>
+            <li>Serví las empanadas de carne bien calientes y disfrutá de este clásico argentino.</li>
+        </ol>
     </div>
 
     <div class="receta">
-        <h2>Receta 4: Asado Argentino</h2>
+        <h2>Receta 4: Asado </h2>
         <!-- Contenido de la receta 4 -->
     </div>
 
@@ -80,7 +99,7 @@
     </div>
 
     <div class="receta">
-        <h2>Receta 8: Locro Argentino</h2>
+        <h2>Receta 8: Locro </h2>
         <!-- Contenido de la receta 8 -->
     </div>
 
