nuevo archivo:  Busqueda.html 	nuevo archivo:  busqueda.css 	nuevo archivo:  busqueda.js 	modificado:     index.html 	nuevo archivo:  "menu_del_d\303\255a/Domingo.html" 	nuevo archivo:  "menu_del_d\303\255a/Jueves.html" 	nuevo archivo:  "menu_del_d\303\255a/Lunes.html" 	nuevo archivo:  "menu_del_d\303\255a/Martes.html" 	nuevo archivo:  "menu_del_d\303\255a/Miercoles.html" 	nuevo archivo:  "menu_del_d\303\255a/Sabado.html" 	nuevo archivo:  "menu_del_d\303\255a/Viernes.html"  nuevo archivo:  recetas_usuarios.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
 <nav id="navegacion"> 
   <ul id="barra_nav">
-     <li> <span class="material-symbols-outlined">skillet_cooktop</span> <a href="recetas.html">Recetas</a> </li>
+     <li> <span class="material-symbols-outlined">skillet_cooktop</span> <a href="recetas.html">Recetas Argentinas</a> </li>
      <li> <span class="material-symbols-outlined">book_3</span> <a href="libros.html">Libros</a> </li>
      <li> <span class="material-symbols-outlined">school</span> <a href="cursos.html">Cursos</a> </li>
      <li> <span class="material-symbols-outlined"> alternate_email </span><a href="contacto.html">Contacto</a> </li>
@@ -35,15 +35,16 @@
   
 <div class="grid-container">
     <div class="caja caja1 animate__animated animate__pulse"><a href="plato_del_dia.html" class="no_subrayar">Plato del día</a></div>
-    <div class="caja caja2 animate__animated animate__pulse"><a href="Recenta_usuarios.html" class="no_subrayar">Receta sugerido por usuarios/as</a></div>
+    <div class="caja caja2 animate__animated animate__pulse"><a href="Receta_usuarios.html" class="no_subrayar">Recetas sugeridas por usuarios/as</a></div>
     <div class="caja caja3 animate__animated animate__pulse"><a href="Receta_chiquitos.html" class="no_subrayar">De los mas chiquitos</a></div>
-    <div class="caja caja4 animate__animated animate__pulse">Caja 4</div>
+    <div class="caja caja4 animate__animated animate__pulse"><a href="Busqueda.html" class="no_subrayar">Busqueda de recetas</a></div>
   </div> 
   
 
   
- <div id="fondo">
-   
+<div id="fondo">
+    <img src="ruta_de_la_imagen.jpg" alt="Imagen de fondo">
+    <p>Texto al lado de la imagen</p>
   </div>
 
 
