modificado:     busqueda.css 	modificado:     index.html 	modificado:     recetas.html 	modificado:     style.css

--- a/index.html
+++ b/index.html
@@ -43,14 +43,35 @@
 
   
 <div id="fondo">
-    <img src="ruta_de_la_imagen.jpg" alt="Imagen de fondo">
-    <p>Texto al lado de la imagen</p>
+    <img src="imagenes/imagen_principal_index.png" alt="Imagen de fondo">
+    <p>Nadie nace siendo un buen cocinero, se aprende practicando.</p>
   </div>
 
 
- <footer>
-   footer
-  </footer>
+  <footer>
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-logo">
+                <img src="imagenes/gorro-de-cocinero.png" alt="Logo de Delicias Culinarias">
+            </div>
+            <div class="footer-contact">
+                <p>Contacto: info@deliciasculinarias.com</p>
+                <p>Teléfono: +123 456 789</p>
+            </div>
+            <div class="footer-links">
+                <ul>
+                    <li><a href="politica-de-privacidad.html">Política de Privacidad</a></li>
+                    <li><a href="terminos-de-servicio.html">Términos de Servicio</a></li>
+                    <li><a href="mapa-del-sitio.html">Mapa del Sitio</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="copyright">
+            &copy; 2023 Delicias Culinarias. Todos los derechos reservados.
+        </div>
+    </div>
+</footer>
+
 
 
 </html>
