modificado:     index.html 	nuevo archivo:  libros.css 	modificado:     libros.html 	nuevo archivo:  recetas_usuarios.css 	modificado:     recetas_usuarios.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   
 <div class="grid-container">
     <div class="caja caja1 animate__animated animate__pulse"><a href="plato_del_dia.html" class="no_subrayar">Plato del día</a></div>
-    <div class="caja caja2 animate__animated animate__pulse"><a href="Receta_usuarios.html" class="no_subrayar">Recetas sugeridas por usuarios/as</a></div>
+    <div class="caja caja2 animate__animated animate__pulse"><a href="recetas_usuarios.html" class="no_subrayar">Recetas sugeridas por usuarios/as</a></div>
     <div class="caja caja3 animate__animated animate__pulse"><a href="Receta_chiquitos.html" class="no_subrayar">De los mas chiquitos</a></div>
     <div class="caja caja4 animate__animated animate__pulse"><a href="Busqueda.html" class="no_subrayar">Busqueda de recetas</a></div>
   </div> 
