modificado:     plato_del_dia.html

--- a/plato_del_dia.html
+++ b/plato_del_dia.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Plato del Día</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="plato_del_dia.css">
     <script src="plato_del_dia.js"></script>
 </head>
 <body>
