--- a/plato_del_dia.html
+++ b/plato_del_dia.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Plato del Día</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="recipe.js"></script>
+    <link rel="stylesheet" href="plato_del_dia.css">
+    <script src="plato_del_dia.js"></script>
 </head>
 <body>
     <h1>Plato del Día</h1>
