modificado:     busqueda.css 	modificado:     plato_del_dia.css 	modificado:     plato_del_dia.html 	modificado:     plato_del_dia.js

--- a/plato_del_dia.html
+++ b/plato_del_dia.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plato del Día</title>
     <link rel="stylesheet" href="plato_del_dia.css">
-    <script src="plato_del_dia.js"></script>
 </head>
 <body>
-    <h1>Plato del Día</h1>
+    <header>
+        <h1>Plato del Día</h1>
+    </header>
+
     <div id="recipe-container">
-        <!-- Recipe details will be displayed here -->
+        <h2 id="recipe-title">Título del Plato del Día</h2>
+        <p id="recipe-instructions">Instrucciones para preparar el plato del día.</p>
+        
     </div>
+
+    <a href="index.html" id="volver-a-inicio">Volver a la Página Principal</a>
+
+    <script src="plato_del_dia.js"></script>
 </body>
 </html>
+
+
 
