modificado:     Busqueda.html 	modificado:     busqueda.css

--- a/Busqueda.html
+++ b/Busqueda.html
@@ -3,6 +3,8 @@
 <head>
     <title>Buscador de Recetas</title>
     <link rel="stylesheet" type="text/css" href="busqueda.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <h1>Recetas de Cocina</h1>
@@ -10,7 +12,10 @@
         <input type="text" id="query" placeholder="Ingresa un ingrediente o plato">
         <button type="submit">Buscar</button>
     </form>
-    <div id="results"></div>
+    <div id="results">
+
+        
+    </div>
 
 
     <a href="index.html" id="volver_a_inicio">Volver a la página de inicio</a>
