modificado:     Busqueda.html 	modificado:     Receta_chiquitos.html 	modificado:     contacto.html 	renombrado:     Receta_chiquitos.css -> css/Receta_chiquitos.css 	renombrado:     busqueda.css -> css/busqueda.css 	renombrado:     libros.css -> css/libros.css 	renombrado:     plato_del_dia.css -> css/plato_del_dia.css 	renombrado:     recetas.css -> css/recetas.css 	renombrado:     recetas_usuarios.css -> css/recetas_usuarios.css 	renombrado:     style.css -> css/style.css 	modificado:     cursos.html 	modificado:     index.html 	renombrado:     busqueda.js -> js/busqueda.js 	renombrado:     plato_del_dia.js -> js/plato_del_dia.js 	modificado:     libros.html 	modificado:     plato_del_dia.html 	modificado:     recetas.html 	modificado:     recetas_usuarios.html

--- a/Busqueda.html
+++ b/Busqueda.html
@@ -2,9 +2,11 @@
 <html>
 <head>
     <title>Buscador de Recetas</title>
-    <link rel="stylesheet" type="text/css" href="busqueda.css">
+    <link rel="stylesheet" type="text/css" href="css/busqueda.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="imagenes/gorro-de-cocinero.png">
+
 </head>
 <body>
     <h1>Recetas de Cocina</h1>
@@ -21,7 +23,7 @@
     <a href="index.html" id="volver_a_inicio">Volver a la página de inicio</a>
 
 
-    <script src="busqueda.js"></script>
+    <script src="js/busqueda.js"></script>
 </body>
 
 
