--- a/libros.html
+++ b/libros.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listado de Libros para Descarga</title>
-    <link rel="stylesheet" href="libros.css">
+    <link rel="stylesheet" href="css/libros.css">
+    <link rel="icon" href="imagenes/gorro-de-cocinero.png">
+
 </head>
 <body>
     <header>
