--- a/plato_del_dia.html
+++ b/plato_del_dia.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plato del Día</title>
-    <link rel="stylesheet" href="plato_del_dia.css">
+    <link rel="stylesheet" href="css/plato_del_dia.css">
+    <link rel="icon" href="imagenes/gorro-de-cocinero.png">
+
 </head>
 <body>
     <header>
@@ -19,7 +21,7 @@
 
     <a href="index.html" id="volver-a-inicio">Volver a la Página Principal</a>
 
-    <script src="plato_del_dia.js"></script>
+    <script src="js/plato_del_dia.js"></script>
 </body>
 </html>
 
