--- a/recetas_usuarios.html
+++ b/recetas_usuarios.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canelones de Verdura</title>
-    <link rel="stylesheet" href="recetas_usuarios.css">
+    <link rel="stylesheet" href="css/recetas_usuarios.css">
+    <link rel="icon" href="imagenes/gorro-de-cocinero.png">
+
 </head>
 <body>
     <header>
