--- a/Receta_chiquitos.html
+++ b/Receta_chiquitos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recetas de los peques</title>
-    <link rel="stylesheet" href="Receta_chiquitos.css">
+    <link rel="stylesheet" href="css/Receta_chiquitos.css">
     <link rel="icon" href="imagenes/gorro-de-cocinero.png">
 
 </head>
