modificado:     Receta_chiquitos.html 	modificado:     css/Receta_chiquitos.css 	modificado:     css/busqueda.css 	modificado:     css/libros.css 	modificado:     css/plato_del_dia.css 	modificado:     css/recetas.css 	modificado:     css/recetas_usuarios.css 	modificado:     css/style.css 	modificado:     index.html 	modificado:     libros.html 	modificado:     recetas_usuarios.html

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
             </div>
             <div class="footer-contact">
                 <p>Contacto: info@deliciasculinarias.com</p>
-                <p>Teléfono: +123 456 789</p>
+                <p>Teléfono: +54 11 10101010</p>
             </div>
             <div class="footer-links">
                 <ul>
                     <li><a href="politica-de-privacidad.html">Política de Privacidad</a></li>
                     <li><a href="terminos-de-servicio.html">Términos de Servicio</a></li>
-                    <li><a href="mapa-del-sitio.html">Mapa del Sitio</a></li>
+                    
                 </ul>
             </div>
         </div>
