--- a/contacto.html
+++ b/contacto.html
@@ -1,1 +1,97 @@
-<link rel="icon" href="imagenes/gorro-de-cocinero.png">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Delicias Culinarias</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">    
+    <link rel="icon" href="imagenes/gorro-de-cocinero.png">
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+   
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+
+    <script src="js/script.js"></script>
+
+
+</head>
+<body>
+  <header>
+  <h1 class="animate__animated animate__slideInLeft">
+    Delicias Culinarias: Sabores que Encantan y Recetas que Despiertan Pasiones
+  </h1>
+</header>
+  
+<nav id="navegacion"> 
+  <ul id="barra_nav">
+     <li> <a href="recetas.html">Recetas Argentinas</a> </li>
+     <li> <a href="libros.html">Libros</a> </li>
+     <li> <a href="cursos.html">Cursos</a> </li>
+     <li> <a href="contacto.html">Contacto</a> </li>
+   </ul>
+</nav>
+   
+   <main role="main" class="container">
+    <div class="row">
+        <!-- Aquí pon las col-x necesarias, comienza tu contenido, etcétera -->
+        <div class="col-12">
+            <h1>Contactanos...</h1>
+        </div>
+        <div class="col-12">
+            <form action="mailto:mail@mail.com" method="POST">
+                <div class="form-group">
+                    <label for="nombre">Nombre</label>
+                    <input name="nombre" required type="text" id="nombre"
+                        class="form-control" placeholder="Tu nombre">
+                </div>
+                <div class="form-group">
+                    <label for="correo">Correo electrónico</label>
+                    <input name="correo" required type="email" id="correo"
+                        class="form-control" placeholder="Tu correo electrónico">
+                </div>
+                <div class="form-group">
+                    <label for="mensaje">Mensaje</label>
+                    <textarea required placeholder="Escribe tu mensaje"
+                        class="form-control" name="mensaje" id="mensaje"
+                        cols="30" rows="5"></textarea>
+                </div>
+                <div class="form-group">
+                    <button class="btn-success btn" type="submit">
+                        Enviar
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+    </main>
+
+
+
+  <footer>
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-logo">
+                <img src="imagenes/gorro-de-cocinero.png" alt="Logo de Delicias Culinarias">
+            </div>
+            <div class="footer-contact">
+                <p>Contacto: info@deliciasculinarias.com</p>
+                <p>Teléfono: +54 11 10101010</p>
+            </div>
+            <div class="footer-links">
+                <ul>
+                    <li><a href="politica-de-privacidad.html">Política de Privacidad</a></li>
+                    <li><a href="terminos-de-servicio.html">Términos de Servicio</a></li>
+                    
+                </ul>
+            </div>
+        </div>
+        <div class="copyright">
+            &copy; 2023 Delicias Culinarias. Todos los derechos reservados.
+        </div>
+    </div>
+</footer>
+
+
+</body>
+</html>
