--- a/libros.html
+++ b/libros.html
@@ -16,7 +16,7 @@
     
     <header>
         <h1 class="animate__animated animate__slideInLeft">
-          Delicias Culinarias: Sabores que Encantan y Recetas que Despiertan Pasiones
+            <a href="index.html" style="text-decoration: none; color: inherit; display: block; text-align: center;">Delicias Culinarias: Sabores que Encantan y Recetas que Despiertan Pasiones</a>
         </h1>
       </header>
         
