--- a/recetas.html
+++ b/recetas.html
@@ -17,7 +17,10 @@
 <body>
     <header>
         <h1 class="animate__animated animate__slideInLeft">
-          Delicias Culinarias: Sabores que Encantan y Recetas que Despiertan Pasiones
+            <a href="index.html" style="text-decoration: none; color: inherit; display: block; text-align: center;">Delicias Culinarias: Sabores que Encantan y Recetas que Despiertan Pasiones</a>
+
+
+            
         </h1>
       </header>
         
@@ -344,12 +347,13 @@
     <p>¡Buen provecho!</p>
 
     </div>
-
-    <div class="volver">
-        <a href="index.html">Volver a la Página Principal</a>
-    </div>
+   
 </body>
 </html>
+
+<div class="volver">
+    <a href="index.html">Volver a la Página Principal</a>
+</div>
 
     <footer>
         <div class="container">
