modificado:     Busqueda.html 	modificado:     Receta_chiquitos.html 	modificado:     css/Receta_chiquitos.css 	modificado:     css/busqueda.css 	nuevo archivo:  css/plato_del_dia.css 	modificado:     css/recetas_usuarios.css 	modificado:     libros.html 	modificado:     plato_del_dia.html     modificado:     recetas_usuarios.html

--- a/Receta_chiquitos.html
+++ b/Receta_chiquitos.html
@@ -59,10 +59,34 @@
 </body>
 
 <br> 
-    
+ 
+</html>
 
 <div class="volver">
-      <a href="index.html">Volver a la Página de inicio</a>
-  </div>
+  <a href="index.html">Volver a la Página Principal</a>
+</div>
 
-</html>
+<footer>
+  <div class="container">
+      <div class="footer-content">
+          <div class="footer-logo">
+              <img src="imagenes/gorro-de-cocinero.png" alt="Logo de Delicias Culinarias">
+          </div>
+          <div class="footer-contact">
+              <p>Contacto: info@deliciasculinarias.com</p>
+              <p>Teléfono: +54 11 10101010</p>
+          </div>
+          <div class="footer-links">
+              <ul>
+                  <li><a href="politica-de-privacidad.html">Política de Privacidad</a></li>
+                  <li><a href="terminos-de-servicio.html">Términos de Servicio</a></li>
+                  
+              </ul>
+          </div>
+      </div>
+      <div class="copyright">
+          &copy; 2023 Delicias Culinarias. Todos los derechos reservados.
+      </div>
+  </div>
+</footer>
+
