--- a/libros.html
+++ b/libros.html
@@ -33,9 +33,9 @@
         <section id="libros">
             <h2>Libros Disponibles</h2>
             <ul>
-                <li><a href="enlace_del_libro1.pdf" target="_blank">Título del Libro 1</a></li>
-                <li><a href="enlace_del_libro2.pdf" target="_blank">Título del Libro 2</a></li>
-                <li><a href="enlace_del_libro3.pdf" target="_blank">Título del Libro 3</a></li>
+                <li><a href="https://drive.google.com/file/d/1hPGUTFYKBEEULt6UaHod06B_uynbWh28/view?usp=share_link" target="_blank">Cocina Artesanal</a></li>
+                <li><a href="https://drive.google.com/file/d/1EoqjLk1m8XQn82yljTMO218pY5uyqQl1/view?usp=share_link" target="_blank">Cocina Vegetariana</a></li>
+                <li><a href="https://drive.google.com/file/d/11Pv_ScjBe7vuwrzIdv7JM-TuOS7lZDRh/view?usp=share_link" target="_blank">Cocina Vegana</a></li>
                 
             </ul>
         </section>
