--- a/recetas_usuarios.html
+++ b/recetas_usuarios.html
@@ -63,9 +63,31 @@
         <a id="volver_a_inicio" href="index.html">Volver a la página de inicio</a>
     </main>
 
-    <footer>
-        <p>&copy; 2023 Delicias Culinarias. Todos los derechos reservados.</p>
-
-    </footer>
+    
 </body>
 </html>
+<footer>
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-logo">
+                <img src="imagenes/gorro-de-cocinero.png" alt="Logo de Delicias Culinarias">
+            </div>
+            <div class="footer-contact">
+                <p>Contacto: info@deliciasculinarias.com</p>
+                <p>Teléfono: +54 11 10101010</p>
+            </div>
+            <div class="footer-links">
+                <ul>
+                    <li><a href="politica-de-privacidad.html">Política de Privacidad</a></li>
+                    <li><a href="terminos-de-servicio.html">Términos de Servicio</a></li>
+                    
+                </ul>
+            </div>
+        </div>
+        <div class="copyright">
+            &copy; 2023 Delicias Culinarias. Todos los derechos reservados.
+        </div>
+    </div>
+</footer>
+
+
