modificado     modificado:     Busqueda.html     moificado:     Receta_chiquitos.html 	modificado:     contacto.html 	modificado:     cursos.html 	modificado:     index.html 	modificado:     libros.html 	modificado:     plato_del_dia.html 	modificado:     recetas.html 	modificado:     recetas_usuarios.html

--- a/cursos.html
+++ b/cursos.html
@@ -130,8 +130,8 @@
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a href="politica-de-privacidad.html">Política de Privacidad</a></li>
-                    <li><a href="terminos-de-servicio.html">Términos de Servicio</a></li>
+                    <li><a href="https://drive.google.com/file/d/1lDsOgvI9EnIYP1kCJskErRC4xhzf4B03/view?usp=share_link">Política de Privacidad</a></li>
+                    <li><a href="https://drive.google.com/file/d/1c_1J9EMOoi5MuMBPSwj2_3Krt6EH5_lO/view?usp=share_link">Términos de Servicio</a></li>
                     
                 </ul>
             </div>
