--- a/cursos.html
+++ b/cursos.html
@@ -76,7 +76,7 @@
                 <li>
                     <span class="material-symbols-outlined">🍳</span> <h2>Curso de Cocina Italiana</h2>
                     <p>¡Aprende a preparar auténtica comida italiana con nuestros expertos chefs! Descubre los secretos detrás de las pastas frescas, las salsas y los postres más deliciosos.</p>
-                    <a href="curso1.html" class="btn btn-primary">Ir al curso</a>
+                    <a href="https://drive.google.com/file/d/1HOuAmDFbJOp3vmyMx3ssejoFrc4mVbXq/view?usp=share_link" class="btn btn-primary">Ir al curso</a>
                 </li>
             </ul>
         </div>
@@ -86,7 +86,7 @@
                 <li>
                     <span class="material-symbols-outlined">🍣</span> <h2>Curso de Cocina Asiática</h2>
                     <p>Explora la riqueza de sabores de la cocina asiática. Desde sushi y tempura japonesa hasta curry tailandés, este curso te llevará a un viaje culinario emocionante.</p>
-                    <a href="curso2.html" class="btn btn-primary">Ir al curso</a>
+                    <a href="https://drive.google.com/file/d/1HOuAmDFbJOp3vmyMx3ssejoFrc4mVbXq/view?usp=share_link" class="btn btn-primary">Ir al curso</a>
                 </li>
             </ul>
         </div>
@@ -96,7 +96,7 @@
                 <li>
                     <span class="material-symbols-outlined">🍰</span> <h2>Curso de Repostería Creativa</h2>
                     <p>¿Eres un amante de los postres? Únete a nuestro curso de repostería creativa y aprende a hacer deliciosos pasteles, cupcakes y galletas decoradas.</p>
-                    <a href="curso3.html" class="btn btn-primary">Ir al curso</a>
+                    <a href="https://drive.google.com/file/d/1HOuAmDFbJOp3vmyMx3ssejoFrc4mVbXq/view?usp=share_link" class="btn btn-primary">Ir al curso</a>
                 </li>
             </ul>
         </div>
@@ -106,7 +106,7 @@
                 <li>
                     <span class "material-symbols-outlined">🥗</span> <h2>Curso de Cocina Saludable</h2>
                     <p>Descubre cómo cocinar platos deliciosos y saludables. Nuestro curso te enseñará a preparar comidas nutritivas y equilibradas sin comprometer el sabor.</p>
-                    <a href="curso4.html" class="btn btn-primary">Ir al curso</a>
+                    <a href="https://drive.google.com/file/d/1HOuAmDFbJOp3vmyMx3ssejoFrc4mVbXq/view?usp=share_link" class="btn btn-primary">Ir al curso</a>
                 </li>
             </ul>
         </div>
