modificado:     contacto.html 	modificado:     cursos.html 	modificado:     plato_del_dia.html 	modificado:     recetas_usuarios.html

--- a/plato_del_dia.html
+++ b/plato_del_dia.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Plato del Día: Ravioles con Salsa</title>
+    <title>Plato del Día</title>
     <link rel="stylesheet" href="css/plato_del_dia.css">
 </head>
 <body>
